--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "particles.vue3": "^2.2.2",
+    "tsparticles": "^2.2.2",
+    "tsparticles-shape-heart": "^2.2.2",
+    "vue": "^3.2.37",
+    "vue3-particles": "^2.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
