--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "particles.vue3": "^2.2.2",
-    "tsparticles": "^2.2.2",
     "tsparticles-shape-heart": "^2.2.2",
     "vue": "^3.2.37",
-    "vue3-particles": "^2.2.2"
+    "vue3-particles": "^2.2.2",
+    "tsparticles": "^2.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
